--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.32",
     "@reduxjs/toolkit": "^2.2.2",
     "@tanstack/react-query": "^5.28.8",
     "@testing-library/jest-dom": "^5.17.0",
