--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.32",
+    "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.2",
     "@tanstack/react-query": "^5.28.8",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
